# stt-vosk

./: .gitignore  Makefile  README.md  build.sh  first_run.sh  meta.json  pyproject.toml  run.sh  setup.sh
examples/: client.py  listen.py  to_text.py
src/: main.py
src/stt_vosk/: __init__.py  __main__.py  stt.py
